@@ -78,6 +78,14 @@
                             </jvmArgs>
                         </launcher>
                         <launcher>
+                            <id>DecodeHtmlEntities</id>
+                            <mainClass>org.dbpedia.extraction.scripts.DecodeHtmlEntities</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
                             <id>RecodeUris</id>
                             <mainClass>org.dbpedia.extraction.scripts.RecodeUris</mainClass>
                             <jvmArgs>
